# smallville-2

./: .gitignore  AGENT_DIRECTION.md  ASSET_BRIDGE_SPEC.md  CLAUDE.md  COGNITION_GUIDE.md  DIAGNOSTIC_EXPERIMENT_PLAN.md  FAILED_APPROACHES.md  FOUNDATION_REBUILD_ROADMAP.md  MEMORY_ROADMAP.md  MEMORY_V2_ROADMAP.md  NEXT_PHASE_PLAN.md  PROJECT_ROADMAP.md  README.md  VECTORIZATION_ROADMAP.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: npc_thinker.md  overseer_analyst.md  self_explorer.md  stanford_explorer.md  swarm_explorer.md  world_simulator.md
.claude/skills/: diagnostic_simulation.md  event_system.md  memory_ops.md  npc_creation.md  overseer_eval.md  spatial_awareness.md  test_runner.md  validate_doors.md  validate_intelligence.md  validate_movement.md  validate_rendering.md  world_gen.md
client/: CLAUDE.md  index.html
client/css/: main.css
client/js/: asset_contract.js  chat_ui.js  hud.js  main.js  memory_inspector.js  npc_renderer.js  player_controls.js  procedural_assets.js  trade_ui.js  world_renderer.js
core/: CLAUDE.md  __init__.py
core/economy/: __init__.py  construction.py  crafting.py  resources.py  trading.py
core/events/: __init__.py  impact.py
core/evolution/: __init__.py  fitness.py  guardrails.py  mechanisms.py  overseer.py
core/memory/: __init__.py  compaction.py  conversation_outcomes.py  episodic.py  manager.py  reflection.py  self_review.py  spatial.py  structured.py
core/npc/: __init__.py  economy_tick.py  models.py  (+8 more)
server/: CLAUDE.md  main.py
tests/: check_spatial_integrity.py  conftest.py
tools/: dump_memories.py
(+149 files in other folders)
