[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallville-core"
version = "0.1.0"
description = "Self-evolving NPC ecosystem — AI-driven agents with persistent memory, goals, relationships, and evolutionary dynamics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jesse Passmore"},
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "anthropic>=0.25.0",
    "chromadb>=0.5.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real LLM API (deselect with -m 'not integration')",
    "simulation: long-running headless simulation tests (deselect with -m 'not simulation')",
    "narrative: opt-in narrative sim tests — real Gemma LLM, slow, hand-run when introducing or changing NPC reasoning features. Select with `pytest -m narrative`; deselected from default runs.",
]
# Default: deselect narrative tests so routine `pytest` runs stay fast.
# Override with `pytest -m narrative` (or `-m 'narrative or simulation'`
# etc.) when you want them included.
addopts = "-m 'not narrative'"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
